@@ -8,6 +8,7 @@ TRUNK
 * constant literals are allowed inside mxAlgebra() statements, e.g. mxAlgebra(1 + 2 + 3)
 * constant literals can be of the form 1.234E+56 or 1.234e+56.
 * type checking added to mxMatrix arguments (prompted by a forum post)
+* mxPath() issues an error if any of the arguments are longer than the number of paths to be generated
 
 Release 0.1.3-776
 =============
